# hpc

./: .gitignore  index.html  params.json
ps1/: Makefile  test.sh
ps1/include/: .qsort.h.swp  qsort.h
ps1/msvc/: qsort.sdf  qsort.sln  qsort.vcxproj  qsort.vcxproj.filters
ps1/msvc/Debug/: qsort.ilk  vc140.idb
ps1/msvc/Debug/qsort.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  qsort.lastbuildstate
ps1/msvc/Release/qsort.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  qsort.lastbuildstate
ps1/src/: qsort.c
ps1/test/: test.c
ps2/: CMakeLists.txt  README.md  build.sh  perf.txt  run.sh  test.sh
ps2/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
ps2/include/: point.h  qsort.h  qsort_test.h  qsort_time.h  scan.h  scan_test.h  scan_time.h  test.h  util.h
ps2/msvc/: ps2.vcxproj  ps2.vcxproj.filters
ps2/src/: main.c  main_test.c  main_time.c  qsort.c  qsort_test.c  qsort_time.c  scan.c  scan_test.c  scan_time.c  test.c  util.c
ps2/test/: qsort_test.c
ps3/bsearch/include/: bsearch.h
ps3/bugs/: mpi_solved1.c  mpi_solved2.c  mpi_solved3.c  mpi_solved4.c  mpi_solved5.c  mpi_solved6.c  mpi_solved7.c
ps3/ring/: ring  ring.c  run.sh
